src/objects/Client_Financial__c.object
<CustomObject>
    <fields>
        <fullName>Account_Prefix__c</fullName>
        <label>Account Prefix</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Out__c</fullName>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chase_Group__c</fullName>
        <label>Chase Group</label>
        <picklist>
            <picklistValues>
                <fullName>SS01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EV01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Discount__c</fullName>
        <label>Client Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Financial_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client Financial Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_Controller__c</fullName>
        <label>Controller</label>
        <picklist>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search &amp; Selection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Ever_Been_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Ever Been Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Ever_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Ever Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>14 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from date of invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from end of month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days from date of invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days from end of month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be analysed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Financials</relationshipLabel>
        <relationshipName>Client_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Client Financial</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Financial Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>